alignment fixed

--- a/src/app/feed/feed-area/feed-area.component.css
+++ b/src/app/feed/feed-area/feed-area.component.css
@@ -105,7 +105,7 @@ body {
     color: #999;
   }
   #post_footer div {
-    padding: 2%;
+    padding: 1%;
     text-align: right;
   }
 
