--- a/src/app/feed/feed.component.css
+++ b/src/app/feed/feed.component.css
@@ -46,12 +46,11 @@ body {
     background: #343a40;
     height: 100vh;
     width: 240px;
-    margin-top: 4%;
     position: absolute;
     top: 0;
     left: 0;
     color:white;
-    z-index: 5;
+    z-index: 0;
     outline: none;
   }
   .menu .avatar {
